--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <SeekBar
-        android:id="@+id/seekBar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:max="100"
-        android:maxHeight="4dp"
-        android:minHeight="4dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:progressDrawable="@drawable/seek_bar_progress"
-        android:thumb="@drawable/seek_bar_thumb"
-        android:thumbOffset="20dp"/>
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
+
+        <RelativeLayout
+            android:id="@+id/colorBackgroundDemo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="16dp"
+                android:layout_centerInParent="true"
+                android:background="@android:color/white"/>
+
+            <SeekBar
+                android:id="@+id/seekBar1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
+                android:max="100"
+                android:maxHeight="4dp"
+                android:minHeight="4dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:progressDrawable="@drawable/seek_bar_progress"
+                android:thumb="@drawable/seek_bar_thumb"
+                android:thumbOffset="20dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp">
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="16dp"
+                android:layout_centerInParent="true"
+                android:background="@android:color/white"/>
+
+            <SeekBar
+                android:id="@+id/seekBar2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
+                android:max="100"
+                android:maxHeight="4dp"
+                android:minHeight="4dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:progressDrawable="@drawable/seek_bar_progress"
+                android:thumb="@drawable/seek_bar_thumb"
+                android:thumbOffset="20dp"/>
+        </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
